# flwr-contributions

./: .gitignore  README.md  pyproject.toml  run_strategies.sh
flwr_contributions/: baseline_contribution_strategy.py  flwr_contributions.py  leave_one_out.py  loo.py  round_shapley_values.py  shapley_values.py
flwr_contributions/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  flwr_hardware-checkpoint.py  testing-checkpoint.ipynb  testing_pytorch_limitations-checkpoint.ipynb
flwr_contributions/flower_baselines/: CUDA_VisionDataSet.py  cifar100.py  flowertune_llm.py  speech_commands.py  tiny_imagenet.py
flwr_shapley/: baseline_contribution_strategy.py  federated_shapley.py
scripts/: client_app.py  server_app.py  test_samplers.py
shapley/: kernel_samplers.py  probabilistic_samplers.py  shapley_values.py  sphere_samplers.py
src/flwr_contributions/: FedContrib.py  shapley_utils.py
task/: cifar10.py  cuda_vision.py  data_utils.py
task/storage/: flowertune_llm.py  speech_commands.py  tiny_imagenet.py  whisper.py
tests/: client.py  data.py  test.py
