[tool.poetry]
name = "flwr-contributions"
version = "0.1.0"
description = ""
authors = ["arnogeimer <arno.geimer@uni.lu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flwr={extras = ["simulation"], version = "1.15.0"}
flwr-datasets={extras = ["vision"], version = "^0.5.0"}
numpy = "^1.26.4"
torch="2.3.1"
torchvision = "^0.18.0"
pandas = "^2.2.2"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
