[project]
name = "flwr-contributions"
version = "0.1.0"
description = ""
authors = [{name = "arnogeimer"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flwr[simulation]>=1.26.1",
    "flwr-datasets[vision]>=0.6.0",
    "numpy>=2.4.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "timm>=1.0.0",
    "tqdm>=4.0.0",
    "transformers>=4.0.0",
    "peft>=0.7.0",
    "trl>=0.7.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.14.0",
    "ipython>=9.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shapley", "flwr_shapley"]

[tool.flwr.app]
publisher = "arnogeimer"

[tool.flwr.app.components]
serverapp = "scripts.server_app:app"
clientapp = "scripts.client_app:app"

[tool.flwr.app.config]
# Federation
num-server-rounds = 5
num-clients = 10
fraction-fit = 1.0
fraction-evaluate = 0.0

# Task
experiment = "cifar10"
batch-size = 1024
learning-rate = 0.001
local-epochs = 1
split-method = "uniform"
dirichlet-alpha = 0.5

# Aggregation
aggregation-strategy = "fedavg"

# Shapley
use-contributions = true
contribution-method = "multi-round"
sampler-type = "mallows"
num-samples = 2
